# coding-challenges

./: README.md
huffman-encoder/: .gitignore  Makefile  README.md  huffman.c
huffman-encoder-c/: .gitignore  Makefile  README.md  huffman.c
huffman-encoder-rust/: .gitignore  Cargo.toml  Makefile  README.md  huffman  test.txt
huffman-encoder-rust/src/: main.rs
huffman-encoder-rust/tests/: integration_tests.rs
learn-c/: Makefile  bitshifting.c
learn-rust/: borrowing.rs  files.rs
