[package]
name = "huffman-encoder"
version = "0.1.0"
edition = "2021"
authors = ["Your Name <your.email@example.com>"]
description = "A Huffman compression encoder/decoder implemented in Rust"
license = "MIT OR Apache-2.0"

[dependencies]
clap = { version = "4.0", features = ["derive"] }
anyhow = "1.0"
thiserror = "1.0"
